continue working on updating java modules